[gd_scene load_steps=18 format=3 uid="uid://5goxrtc70ga7"]

[ext_resource type="Material" uid="uid://cdnmf431kgh7" path="res://05_SHADER_TEST/Subscene_materials/Subscene_basic_mat_far.tres" id="2_fwt0j"]
[ext_resource type="Material" uid="uid://cnldw4hovjlgd" path="res://05_SHADER_TEST/Subscene_materials/Subscene_shine_elements_mat.tres" id="3_40rbt"]
[ext_resource type="Script" path="res://08_SUBSCENES/Teleporter/Magnet.gd" id="4_ahav0"]
[ext_resource type="Script" path="res://08_SUBSCENES/Teleporter/Take_teleporter.gd" id="5_1ejjm"]

[sub_resource type="PrismMesh" id="PrismMesh_g7ig4"]

[sub_resource type="PrismMesh" id="PrismMesh_85su3"]

[sub_resource type="SphereShape3D" id="SphereShape3D_skf8y"]
radius = 1.62092

[sub_resource type="SphereShape3D" id="SphereShape3D_fsn5p"]
radius = 0.117408

[sub_resource type="TorusMesh" id="TorusMesh_tvllk"]
inner_radius = 2.289
outer_radius = 1.5
rings = 32
ring_segments = 16

[sub_resource type="VisualShaderNodeColorParameter" id="VisualShaderNodeColorParameter_ar8u6"]
parameter_name = "Light_color_ui"
qualifier = 1

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_w6m6h"]
constant = 0.4

[sub_resource type="VisualShaderNodeExpression" id="VisualShaderNodeExpression_x0hof"]
size = Vector2(724.789, 654.559)
expression = "const float DITHER_THRESHOLDS[16] ={
		1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
		13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
		4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
		16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
	};
	
vec2 uv = FRAGCOORD.xy * Size;
int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
Dither_Node = In - DITHER_THRESHOLDS[index];"

[sub_resource type="VisualShaderNodeStep" id="VisualShaderNodeStep_da32g"]

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_50n6f"]
constant = 0.814

[sub_resource type="VisualShader" id="VisualShader_jxk1w"]
code = "shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_back, diffuse_lambert, specular_schlick_ggx, unshaded;

global uniform vec4 Light_color_ui : source_color;



void fragment() {
// ColorParameter:2
	vec4 n_out2p0 = Light_color_ui;


// FloatConstant:7
	float n_out7p0 = 0.814000;


// FloatConstant:3
	float n_out3p0 = 0.400000;


	float n_out4p0;
// Expression:4
	n_out4p0 = 0.0;
	{
		const float DITHER_THRESHOLDS[16] ={
				1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
				13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
				4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
				16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
			};
			
		vec2 uv = FRAGCOORD.xy * n_out3p0;
		int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
		n_out4p0 = n_out7p0 - DITHER_THRESHOLDS[index];
	}


// Step:6
	float n_out6p0 = step(n_out2p0.x, n_out4p0);


// Output:0
	ALBEDO = vec3(n_out2p0.xyz);
	ALPHA = n_out6p0;


}
"
graph_offset = Vector2(-2592.23, 392.193)
flags/unshaded = true
nodes/fragment/2/node = SubResource("VisualShaderNodeColorParameter_ar8u6")
nodes/fragment/2/position = Vector2(-760, -40)
nodes/fragment/3/node = SubResource("VisualShaderNodeFloatConstant_w6m6h")
nodes/fragment/3/position = Vector2(-1380, 520)
nodes/fragment/4/node = SubResource("VisualShaderNodeExpression_x0hof")
nodes/fragment/4/position = Vector2(-1200, 380)
nodes/fragment/4/size = Vector2(724.789, 654.559)
nodes/fragment/4/input_ports = "0,0,In;1,0,Size;"
nodes/fragment/4/output_ports = "0,0,Dither_Node;"
nodes/fragment/4/expression = "const float DITHER_THRESHOLDS[16] ={
		1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
		13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
		4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
		16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
	};
	
vec2 uv = FRAGCOORD.xy * Size;
int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
Dither_Node = In - DITHER_THRESHOLDS[index];"
nodes/fragment/6/node = SubResource("VisualShaderNodeStep_da32g")
nodes/fragment/6/position = Vector2(-351.825, 215.819)
nodes/fragment/7/node = SubResource("VisualShaderNodeFloatConstant_50n6f")
nodes/fragment/7/position = Vector2(-1440, 360)
nodes/fragment/connections = PackedInt32Array(3, 0, 4, 1, 4, 0, 6, 1, 6, 0, 0, 1, 7, 0, 4, 0, 2, 0, 6, 0, 2, 0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_of2nf"]
render_priority = 0
shader = SubResource("VisualShader_jxk1w")

[sub_resource type="TorusMesh" id="TorusMesh_rprlq"]
inner_radius = 2.546
outer_radius = 2.972
rings = 32
ring_segments = 16

[node name="Outer_mirror_orbe" type="Area3D"]
collision_layer = 6
collision_mask = 6

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(0.130936, 0, 0, 0, 0.130936, 0, 0, 0, 0.130936, 0, 0.0166921, 0)
layers = 4
mesh = SubResource("PrismMesh_g7ig4")
surface_material_override/0 = ExtResource("2_fwt0j")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(0.061185, 0, 0, 0, 0.061185, 0, 0, 0, 0.061185, 0, 0, 0.0416332)
layers = 4
mesh = SubResource("PrismMesh_85su3")
surface_material_override/0 = ExtResource("3_40rbt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_skf8y")

[node name="Area_take_it" type="Area3D" parent="."]
collision_layer = 6
collision_mask = 6

[node name="Magnet" type="Node" parent="Area_take_it"]
script = ExtResource("4_ahav0")

[node name="Take_teleporter" type="Node" parent="Area_take_it"]
script = ExtResource("5_1ejjm")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area_take_it"]
shape = SubResource("SphereShape3D_fsn5p")

[node name="teleporter_circle" type="MeshInstance3D" parent="."]
transform = Transform3D(0.0529083, -8.7878e-17, -6.44371e-15, -6.44371e-15, -2.1706e-10, -0.0529083, 9.3631e-16, 0.00496572, -2.31271e-09, 0, 0, 0)
layers = 4
mesh = SubResource("TorusMesh_tvllk")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("ShaderMaterial_of2nf")

[node name="teleporter_circle_close" type="MeshInstance3D" parent="."]
transform = Transform3D(0.0529083, -8.7878e-17, -6.44371e-15, -6.44371e-15, -2.1706e-10, -0.0529083, 9.3631e-16, 0.00496572, -2.31271e-09, 0, 0, 0)
visible = false
layers = 4
mesh = SubResource("TorusMesh_rprlq")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("ShaderMaterial_of2nf")

[connection signal="area_shape_entered" from="Area_take_it" to="Area_take_it/Take_teleporter" method="_on_area_take_it_area_shape_entered"]
[connection signal="area_shape_exited" from="Area_take_it" to="Area_take_it/Take_teleporter" method="_on_area_take_it_area_shape_exited"]
